<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/logoImageView"
        app:layout_constraintEnd_toStartOf="@id/logoImageView"
        app:layout_constraintTop_toTopOf="@id/logoImageView" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/app_logo_desc"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toTopOf="@id/nicknameTextInput"
        app:layout_constraintEnd_toEndOf="@id/nicknameTextInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_nickname"
        app:boxStrokeColor="@color/accent"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:hintTextColor="@color/accent"
        app:layout_constraintBottom_toTopOf="@id/emailTextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        app:boxStrokeColor="@color/accent"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:hintTextColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nicknameTextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_button"
        android:text="@string/text_next"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>